# HUSKY_ROBOT_SIMULATION

./: README.md
Exercise 1/husky_drive/: CMakeLists.txt  package.xml
Exercise 2/husky_highlevel_controller/: package.xml
Exercise 2/husky_highlevel_controller/include/husky_highlevel_controller/: HuskyHighlevelController.hpp
Exercise 2/husky_highlevel_controller/launch/: husky_drive.launch
Exercise 2/husky_highlevel_controller/rviz/: laser_config.rviz
Exercise 2/husky_highlevel_controller/src/: HuskyHighlevelController.cpp
Exercise 3/husky_highlevel_controller/: CMakeLists.txt  package.xml
Exercise 3/husky_highlevel_controller/config/: husky_config.yaml
Exercise 3/husky_highlevel_controller/include/husky_highlevel_controller/: HuskyHighlevelController.hpp
Exercise 3/husky_highlevel_controller/launch/: husky_drive.launch
Exercise 3/husky_highlevel_controller/rviz/: husky_config.rviz
Exercise 3/husky_highlevel_controller/src/: HuskyHighlevelController.cpp  husky_highlevel_controller_node.cpp
husky/husky_gazebo/launch/: husky_drive.launch
